2005-07-13  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermData::OnLineModified),
	src/telnetcon.cpp (CTelnetCon::OnLineModified), (CTelnetCon::OnBellTimer)
	(CTelnetCon::OnNewIncomingMessage):
	Add support to new incoming message detection.
	This interface can be used for adding automation in the future.
	All automation can be done in CTelnetCon::OnLineModified and
	CTelnetCon::OnNewIncomingMessage.

2005-07-12  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::OnPaint), (CTermView::DrawChar):
	Greatly improve drawing performance by update invalid area only.
	No more flicker will be seen when popup menus showed.

	* src/mainframe.cpp:
	Add "Reconnect" menu item and its handler.
	Make text colors of tabs indicate the state of connections.
	Fix the bug of "Confirm before closing connected connections".

	* src/telnetcon.cpp (CTelnetCon::Reconnect), 
	(CTelnetCon::OnConnect), (CTelnetCon::OnClose):
	Update tab title of connection when state chages.
	Minor bug fix.

2005-07-12  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/emoticondlg.cpp (CEmoticonDlg::SaveEmoticons):
	Minor bug fix.

2005-07-12  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/dialog.cpp (CDialog::OnResponse):
	Manually connect "response" signal to this handler can enable default 
	processing by CDialog.

	* src/emoticondlg.cpp, 
	src/emoticondlg.h, 
	data/emoticons:
	New File. Add some built-in emoticons frequently used on BBS sites.

	* src/inputdialog.cpp:
	Add a parameter to constructor to initialize the text in GtkEntry.

	* src/listboc.cpp (CListBox::GetItemText):
	Add this function to obtain text of specified row from the list box.

	* src/mainframe.cpp (CMainFrame::CreateMenu), (CMainFrame::OnEmoticons):
	Add emoticon menu item and its signal handler.

	* src/telnetview.cpp (CTelnetView::OnTextInput):
	Add support GDK_KP_* keysyms to enable input from keypad.

	* src/termview.cpp (CTermView::OnTextInput):